syntax = "proto3";

package query;

option go_package = "github.com/tyagivivek8/krc-system/query/proto;querypb";

message QueryRequest {
  string user_id = 1;
  string query = 2;
}

message SearchHit {
  string id = 1;
  string document_name = 2;
  int32 chunk_index = 3;
  string content = 4;
  float score = 5;
}

message SearchResponse {
  repeated SearchHit hits = 1;
}

service QueryService {
  rpc Search (QueryRequest) returns (SearchResponse);
}
